# faiss

./: 1000_test.txt  10k_test.txt  1k_gamma_test.txt  1mil_gamma1k_test.txt  indices.txt  log.txt  n=10k_gamma=10_test.txt  n=10k_gamma=1h_test.txt  run_my_code.sh  run_my_tests.sh  small_test.txt
demos/: CMakeLists.txt  demo_ivfpq_indexing.cpp  demo_new_test.cpp  demo_test_hybrid_large.cpp  demo_test_hybrid_small.cpp  demo_test_search.cpp  demo_test_search_small.cpp  make_indices.cpp  make_sift_indices.cpp  run_queries.cpp
faiss/: IndexHNSW.cpp  IndexHNSW.h
faiss/impl/: HNSW.cpp  HNSW.h  platform_macros.h
logs/: 1h_gamma_test.txt  1mil_gamma1k_test.txt
logs/construction/: n=100k_gamma=1_test.txt  n=10k_gamma=1h_test.txt  n=10k_gamma=70_test.txt
logs/construction/SIFT1M/: sift_n=100000k_gamma=100_test.txt  sift_n=100000k_gamma=10_test.txt  sift_n=100000k_gamma=1_test.txt  sift_n=100000k_gamma=40_test.txt  sift_n=100000k_gamma=70_test.txt  sift_n=10000k_gamma=100_test.txt  sift_n=10000k_gamma=10_test.txt  sift_n=10000k_gamma=1_test.txt  sift_n=10000k_gamma=40_test.txt  sift_n=10000k_gamma=70_test.txt
logs/construction/random_vectors/: n=100k_gamma=10_test.txt  n=10k_gamma=10_test.txt
logs/construction_rand_vecs/: n=100k_gamma=1h_test.txt  n=100k_gamma=40_test.txt  n=100k_gamma=70_test.txt  n=10k_gamma=1_test.txt  n=10k_gamma=40_test.txt
tmp/: index_hnsw_N=10.faissindex
